# hf_fashion

./: README.md  design_illustration.md  pyproject.toml  report.md
src/crew_fashion_color/: .gitignore  crew.py  main.py
src/crew_fashion_color/config/: agents.yaml  tasks.yaml
src/crew_fashion_color/tools/: playground.ipynb
