[project]
name = "crew_fashion_color"
version = "0.1.0"
description = "crew_fashion_color using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0"
]

[project.scripts]
crew_fashion_color = "crew_fashion_color.main:run"
run_crew = "crew_fashion_color.main:run"
train = "crew_fashion_color.main:train"
replay = "crew_fashion_color.main:replay"
test = "crew_fashion_color.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
